# backend

./: .gitignore  Cargo.toml  build.sh  deploy.sh
contract/: Cargo.toml
contract/src/: lib.rs
example-integration/: Cargo.toml
example-integration/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
host/src/api/: mod.rs
host/src/api/routers/: hello.rs  holder.rs  mod.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
shared/: Cargo.toml
shared/src/types/: mod.rs
