[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#methods = { path = "../methods" }
shared = { path = "../shared" }

near-sdk = "4.1.1"
risc0-zkvm = { version = "0.17.0", default-features = false }
bincode = "1.3.3"
base64ct = { version = "1.6.0", features = ["alloc"]}
