[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
shared = { path = "../shared" }

axum = "0.6.20"
base64ct = { version = "1.6.0", features = ["alloc"] }
bincode = "1.3.3"
dotenv = "0.15.0"
rhai = "1.16.3"
risc0-zkvm = { version = "0.17.0" }
serde = "1.0"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
